# swapi_people

./: .gitignore  README.MD  pyproject.toml
people/: models.py  swapi_api_service.py  views.py
people/migrations/: 0001_initial.py
people/templates/: base.html  detail.html  value_count.html
project_config/: settings.py  urls.py
